[gd_scene load_steps=7 format=2]

[ext_resource path="res://world/objects/rocket.png" type="Texture" id=1]
[ext_resource path="res://player/Bullet.gd" type="Script" id=2]
[ext_resource path="res://hitbox and hurtbox/HitBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://sounds/Explosion Sound Effect.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.26639, 19.8761 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8.85634, 17.4442 )

[node name="Bullet" type="Area2D" groups=[
"Bullets",
]]
position = Vector2( -96, -48 )
rotation = -1.5708
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -9.27034, 9.27034 )
scale = Vector2( 1.4206, 1.4206 )
texture = ExtResource( 1 )

[node name="HitBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 85.4189, 42.1878 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -95.2007, -29.306 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -9.92634, 11.1182 )
shape = SubResource( 2 )

[node name="EXPLOSION" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -8.993

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="finished" from="EXPLOSION" to="." method="_on_EXPLOSION_finished"]

[editable path="HitBox"]
